# invert-color

./: CMakeLists.txt  README.md
inc/: bmpImage.h  commandLine.h  exception_d.h  fileGuard.h
script/: run.sh  run_valgrind.sh
src/: bmpImage.cpp  commandLine.cpp  main.cpp
tests/: BMPImageTests.cpp  CMakeLists.txt  commandLineTests.cpp
